rolled back keycloak to before artifact binding